--- a/templates/registr_page/registr.html
+++ b/templates/registr_page/registr.html
@@ -24,24 +24,24 @@
         <div class="card">
             <div class="card-header">
                 <h3>Sign Up</h3>
-                <div class="d-flex justify-content-end social_icon">
-                    {% for provider in socialaccount_providers %}
-                        {% if  provider.name == "Facebook" %}
-                            <span><a style="color: #ffc107"
-                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i
-                                    class="fab fa-facebook-square  "></i></a></span>
-                        {% elif provider.name == "Google" %}
-                            <span><a style="color: #ffc107"
-                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i
-                                    class="fab fa-google-plus"></i></a></span>
-                        {% elif provider.name == "VK" %}
-                            <span><a style="color: #ffc107"
-                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i
-                                    class="fab fa-vk"></i></a></span>
-                        {% endif %}
-
-                    {% endfor %}
-                </div>
+{#                <div class="d-flex justify-content-end social_icon">#}
+{#                    {% for provider in socialaccount_providers %}#}
+{#                        {% if  provider.name == "Facebook" %}#}
+{#                            <span><a style="color: #ffc107"#}
+{#                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i#}
+{#                                    class="fab fa-facebook-square  "></i></a></span>#}
+{#                        {% elif provider.name == "Google" %}#}
+{#                            <span><a style="color: #ffc107"#}
+{#                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i#}
+{#                                    class="fab fa-google-plus"></i></a></span>#}
+{#                        {% elif provider.name == "VK" %}#}
+{#                            <span><a style="color: #ffc107"#}
+{#                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i#}
+{#                                    class="fab fa-vk"></i></a></span>#}
+{#                        {% endif %}#}
+{##}
+{#                    {% endfor %}#}
+{#                </div>#}
             </div>
 
             <div class="card-body">
@@ -79,10 +79,15 @@
                         {{ form.password2 }}
                     </div>
 
-{{ form.errors }}
+                    {{ form.errors }}
                     <div class="form-group">
                         <input class="btn float-right btn btn-warning  " type="submit" name="Create User">
 
+                    </div>
+                    <br>
+                    <br>
+                    <div class="d-flex justify-content-center links">
+                        Have you got an account?<a href="{% url 'account:login' %}">Sign In</a>
                     </div>
                 </form>
 
@@ -94,7 +99,6 @@
     <script>
 
 
-
         var form_fields = document.getElementsByTagName('input')
         form_fields[1].placeholder = 'Username..';
         form_fields[2].placeholder = 'Email.....';
@@ -102,7 +106,8 @@
         form_fields[4].placeholder = 'Re-enter Password...';
 
 
-
     </script>
+</div>
+
 </body>
 </html>
