--- a/templates/registr_page/login.html
+++ b/templates/registr_page/login.html
@@ -55,26 +55,26 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Username" name="username">
+                        <input type="text" name="username" class="form-control" placeholder="Username">
 
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" class="form-control" name="password" placeholder="Password">
+                        <input type="password" name="password" class="form-control" placeholder="Password">
                     </div>
-                    <div class="row align-items-center remember">
-                        <input type="checkbox">Remember Me
-                    </div>
+                    {#                    <div class="row align-items-center remember">#}
+                    {#                        <input type="checkbox">Remember Me#}
+                    {#                    </div>#}
                     <div class="form-group">
                         <input type="submit" value="Login" class="btn float-right login_btn  btn-warning">
                     </div>
                 </form>
             </div>
-            <div class="card-footer">a
+            <div class="card-footer">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account?<a href="{% url 'register' %}">Sign Up</a>
+                    Don't have an account?<a href="{% url 'account:register' %}">Sign Up</a>
                 </div>
                 <div class="d-flex justify-content-center">
                     {% for message in messages %}
