--- a/templates/blog/profile.html
+++ b/templates/blog/profile.html
@@ -9,6 +9,12 @@
     <script src="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
 
     <form method="post">
+        {% csrf_token %}
+        {{ form.media }}
+        {{ form.as_p }}
+        <input type="submit" value="Save">
+    </form>
+    <form method="post">
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
