--- a/templates/registr_page/registr.html
+++ b/templates/registr_page/registr.html
@@ -24,24 +24,24 @@
         <div class="card">
             <div class="card-header">
                 <h3>Sign Up</h3>
-{#                <div class="d-flex justify-content-end social_icon">#}
-{#                    {% for provider in socialaccount_providers %}#}
-{#                        {% if  provider.name == "Facebook" %}#}
-{#                            <span><a style="color: #ffc107"#}
-{#                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i#}
-{#                                    class="fab fa-facebook-square  "></i></a></span>#}
-{#                        {% elif provider.name == "Google" %}#}
-{#                            <span><a style="color: #ffc107"#}
-{#                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i#}
-{#                                    class="fab fa-google-plus"></i></a></span>#}
-{#                        {% elif provider.name == "VK" %}#}
-{#                            <span><a style="color: #ffc107"#}
-{#                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i#}
-{#                                    class="fab fa-vk"></i></a></span>#}
-{#                        {% endif %}#}
-{##}
-{#                    {% endfor %}#}
-{#                </div>#}
+                <div class="d-flex justify-content-end social_icon">
+                    {% for provider in socialaccount_providers %}
+                        {% if  provider.name == "Facebook" %}
+                            <span><a style="color: #ffc107"
+                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i
+                                    class="fab fa-facebook-square  "></i></a></span>
+                        {% elif provider.name == "Google" %}
+                            <span><a style="color: #ffc107"
+                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i
+                                    class="fab fa-google-plus"></i></a></span>
+                        {% elif provider.name == "VK" %}
+                            <span><a style="color: #ffc107"
+                                     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"><i
+                                    class="fab fa-vk"></i></a></span>
+                        {% endif %}
+
+                    {% endfor %}
+                </div>
             </div>
 
             <div class="card-body">
