--- a/templates/blog/heder_footer.html
+++ b/templates/blog/heder_footer.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+    <link rel="stylesheet"
+          href="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/default.css' %}"/>
+    <script src="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
+
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -15,6 +21,7 @@
             <h1 style="color: white;"><a href="{% url 'account:profile' %}"><i class="fas fa-user-tie"></i>
                 &nbsp {{ user.username }} {{ ok }} </a></h1>
             <h3><a href="{% url 'account:logout' %}"><i class="fas fa-sign-out-alt"></i></a></h3>
+            <h5><a href="{% url 'articles:add_article' %}"><i class="fas fa-sign-out-alt"></i>Add Post</a></h5>
         </nav>
     </div>
 </head>
