--- a/templates/blog/profile.html
+++ b/templates/blog/profile.html
@@ -8,12 +8,18 @@
           href="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/default.css' %}"/>
     <script src="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.media }}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+    <div><h1>zux</h1>
+        <form action="" method="POST" enctype=“multipart/form-data”>
+            {{ form.media|safe }}
+            {{ form.as_p }}
+        </form>
+<h1>rid</h1>
+
+    </div>
+
+
+
+
     <form method="post">
         <div class="row">
             <div class="col-md-4">
