--- a/templates/blog/post_short.html
+++ b/templates/blog/post_short.html
@@ -1,4 +1,3 @@
-
-
-<h1>{{ post.title }}</h1>
+<h1>User name {{ user.username }}</h1>
+<a><h1>{{ post.title }}</h1></a>
 {{ post.description|safe }}
