--- a/templates/blog/mainblog.html
+++ b/templates/blog/mainblog.html
@@ -7,7 +7,7 @@
     <div>
 
         <div>
-            <form action="" method="POST" >
+            <form action="" method="POST">
                 {{ form.media }}
                 {{ form.as_p }}
             </form>
@@ -17,16 +17,18 @@
             <div class="card" style="width: 80%; border: 2px solid black ;margin: auto">
                 <div style="border-bottom: 2px solid black; text-align: center">
 
-
+<a href="{% url '' %}">
                     {% include 'blog/post_short.html' %}
 
-
+</a>
                 </div>
 
                 <div class="card-body">
 
                     <div>
-                        <form class="input-group">
+                        <form method="POST" class="input-group">
+                            {% csrf_token %}
+                            {{ form.owner }}
                             <input type="text" class="form-control form-control-sm" placeholder="Comment"
                                    aria-describedby="basic-addon2">
                             <div class="input-group-append">
