--- a/templates/blog/article_detail.html
+++ b/templates/blog/article_detail.html
@@ -1,18 +1,37 @@
 {% extends 'blog/heder_footer.html' %}
 {% load static %}
-<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
-<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
-<link rel="stylesheet"
-      href="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/default.css' %}"/>
-<script src="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
 
 {% block mainblog %}
     <div>
-        <h1>{{ article.title }}</h1>
-        <div> {{ article.description }}</div>
-    {{ article.c }}
+
+        <div class="card" style="width: 80%; border: 2px solid black ;margin: auto">
+            <div style="border-bottom: 2px solid black; text-align: center">
 
 
+                <h1>{{ articla.title }}</h1>
+                <div> {{ article.description|safe }}</div>
+                {{ article.category }}
+
+
+            </div>
+
+            <div class="card-body">
+
+                <div>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit">
+                    </form>
+
+                </div>
+                <div style="text-align: right">
+                    <a href="#"><i class="fas fa-thumbs-up"></i></a>
+                    <a href="#"><i class="fas fa-bookmark"></i></a>
+                </div>
+
+            </div>
+        </div>
     </div>
 
 
