--- a/templates/blog/mainblog.html
+++ b/templates/blog/mainblog.html
@@ -16,11 +16,11 @@
         {% for post in posts %}
             <div class="card" style="width: 80%; border: 2px solid black ;margin: auto">
                 <div style="border-bottom: 2px solid black; text-align: center">
+                    <a href="{% url 'articles:article_detail' pk %}">
 
-<a href="{% url '' %}">
-                    {% include 'blog/post_short.html' %}
+                        {% include 'blog/post_short.html' %}
+                    </a>
 
-</a>
                 </div>
 
                 <div class="card-body">
