--- a/templates/blog/mainblog.html
+++ b/templates/blog/mainblog.html
@@ -13,28 +13,28 @@
             </form>
         </div>
 
-        {% for post in posts %}
+        {% for article in articles %}
             <div class="card" style="width: 80%; border: 2px solid black ;margin: auto">
                 <div style="border-bottom: 2px solid black; text-align: center">
-                    <a href="{% url 'articles:article_detail' pk %}">
+
 
                         {% include 'blog/post_short.html' %}
-                    </a>
+
 
                 </div>
 
                 <div class="card-body">
 
                     <div>
-                        <form method="POST" class="input-group">
-                            {% csrf_token %}
-                            {{ form.owner }}
-                            <input type="text" class="form-control form-control-sm" placeholder="Comment"
-                                   aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-sm btn-outline-white my-0" type="button">Send</button>
-                            </div>
-                        </form>
+{#                        <form method="POST" class="input-group">#}
+{#                            {% csrf_token %}#}
+{#                            {{ form.owner }}#}
+{#                            <input type="text" class="form-control form-control-sm" placeholder="Comment"#}
+{#                                   aria-describedby="basic-addon2">#}
+{#                            <div class="input-group-append">#}
+{#                                <button class="btn btn-sm btn-outline-white my-0" type="button">Send</button>#}
+{#                            </div>#}
+{#                        </form>#}
                     </div>
                     <div style="text-align: right">
                         <a href="#"><i class="fas fa-thumbs-up"></i></a>
