--- a/templates/blog/article_detail.html
+++ b/templates/blog/article_detail.html
@@ -1,7 +1,9 @@
 {% extends 'blog/heder_footer.html' %}
 {% load static %}
 
+
 {% block mainblog %}
+
     <div>
 
         <div class="card" style="width: 80%; border: 2px solid black ;margin: auto">
@@ -17,25 +19,67 @@
 
             <div class="card-body">
 
-                <div>
-                    <form method="post" action="{% url 'articles:article_comment' article.pk %}">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit">
-                    </form>
 
-                </div>
-                <div>
-
-                </div>
                 <div style="text-align: right">
                     <a href="#"><i class="fas fa-thumbs-up"></i></a>
                     <a href="#"><i class="fas fa-bookmark"></i></a>
                 </div>
 
             </div>
+            <div><h4>Comments</h4></div>
+
+
+            <div style="margin:auto ">
+                {% for comment in article.comments.all %}
+                    {% if comment.parent == None %}
+                        <div class="card"
+                             style="width: 1050px; border: 3px solid black ;margin: 10px; padding: 10px 10px 10px 50px">
+                            <b>From <i>{{ comment.owner }}</i></b>
+                            <i> {{ comment.article_comment }}</i>
+                            Date {{ comment.add_comment_date }}
+
+
+                            <div style="width: 90%; border: 1px solid black" ;>
+                                <p>Main comment</p>
+                            </div>
+
+
+                        </div>
+                        {% if comment.get_children %}
+                            {% for children in comment.get_children %}
+                                <div class="card"
+                                     style="width: 1050px; border: 3px solid black ;margin: 10px; padding: 10px 10px 10px 50px">
+                                    <b>From <i>{{ children.owner }}</i></b>
+                                    <i> {{ children.article_comment }}</i>
+                                    Date {{ children.add_comment_date }}
+
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                    {% endif %}
+                {% endfor %}
+
+
+
+
+                <div class="card" style="width: 1050px; border: 3px solid black ;margin: auto">
+                    <div>
+                        <form method="post" action="{% url 'articles:article_comment' article.pk %}">
+                            {% csrf_token %}
+                            <h4>Add comment</h4>
+                            <div style="padding: 20px; ">{{ form.parent }}</div>
+                            <div style="padding: 20px; ">{{ form.article_comment }}</div>
+
+                            <input type="submit" value="Add comment"
+                                   style="display: inline; margin: 0px 10px 10px 20px">
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
 
 
 {% endblock %}
