--- a/templates/blog/heder_footer.html
+++ b/templates/blog/heder_footer.html
@@ -4,14 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title2 %}    {% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
     <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js\for_comment.js' %}"></script>
     <link rel="stylesheet"
           href="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/default.css' %}"/>
+    <link rel="stylesheet"
+          href="{% static 'css\for_comment.css' %}"/>
     <script src="{% static 'ckeditor/ckeditor/plugins/codesnippet/lib/highlight/highlight.pack.js' %}"></script>
+    <script src="{% static 'js\for_comment.js' %}"></script>
 
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -34,6 +46,14 @@
 
 
 </body>
+<script>
+    // Reply box popup JS
+    $(document).ready(function () {
+        $(".reply-popup").click(function () {
+            $(".reply-box").toggle();
+        });
+    });
+</script>
 <!-- Footer -->
 <footer style="background-color: #343a40" class="page-footer font-small special-color-dark pt-4">
     <div style="background-color: #343a40">
