--- a/templates/blog/mainblog.html
+++ b/templates/blog/mainblog.html
@@ -18,30 +18,25 @@
                 <div style="border-bottom: 2px solid black; text-align: center">
 
 
-                        {% include 'blog/post_short.html' %}
+                    {% include 'blog/post_short.html' %}
 
-
+                    <p style="text-align: right; margin-right: 6px">{{ article.created_time }}</p>
                 </div>
 
                 <div class="card-body">
 
-                    <div>
-{#                        <form method="POST" class="input-group">#}
-{#                            {% csrf_token %}#}
-{#                            {{ form.owner }}#}
-{#                            <input type="text" class="form-control form-control-sm" placeholder="Comment"#}
-{#                                   aria-describedby="basic-addon2">#}
-{#                            <div class="input-group-append">#}
-{#                                <button class="btn btn-sm btn-outline-white my-0" type="button">Send</button>#}
-{#                            </div>#}
-{#                        </form>#}
+                    <div style="text-align: left" >
+                        <i class="fas fa-eye"></i>
+
                     </div>
                     <div style="text-align: right">
+
                         <a href="#"><i class="fas fa-thumbs-up"></i></a>
                         <a href="#"><i class="fas fa-bookmark"></i></a>
                     </div>
 
                 </div>
-            </div>{% endfor %}
+            </div>
+            <br>{% endfor %}
     </div>
 {% endblock %}
