--- a/templates/blog/post_short.html
+++ b/templates/blog/post_short.html
@@ -1,3 +1,3 @@
-<h1>User name {{ user.username }}</h1>
-<a href="{% url 'articles:article_detail' article.pk %}"><h1>{{ article.title }}</h1></a>
-{{ article.description|safe }}
+<a href="{% url 'articles:article_detail' article.pk %}"><h1>User name {{ article.owner }}</h1>
+<h1>{{ article.title }}</h1>
+{{ article.description|safe }}</a>
