count number of view

--- a/templates/article/create_post_page.html
+++ b/templates/article/create_post_page.html
@@ -1,4 +1,4 @@
-{% extends 'blog/heder_footer.html' %}
+{% extends 'navbar.html' %}
 {% load static %}
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
