--- a/templates/article/article_detail.html
+++ b/templates/article/article_detail.html
@@ -1,5 +1,6 @@
 {% extends 'navbar.html' %}
 {% load static %}
+{% load hitcount_tags %}
 
 
 {% block mainblog %}
@@ -10,22 +11,25 @@
             <div style="border-bottom: 2px solid black; text-align: center">
 
 
-                <h1>{{ articla.title }}</h1>
+                <h1>{{ article.title }}</h1>
                 <div> {{ article.description|safe }}</div>
                 {{ article.category }}
 
 
             </div>
 
-            <div class="card-body">
 
+            <div class="card-body" style="text-align: right;">
+                <p><i class="fas fa-eye"></i> {% get_hit_count for article %}&emsp;
 
-                <div style="text-align: right">
-                    <a href="#"><i class="fas fa-thumbs-up"></i></a>
+                    <a href="#"><i class="fas fa-thumbs-up"></i></a>&emsp;
                     <a href="#"><i class="fas fa-bookmark"></i></a>
-                </div>
+                </p>
+
 
             </div>
+
+
             <div><h4>Comments</h4></div>
 
 
@@ -67,7 +71,7 @@
                     <div>
                         <form method="post" action="{% url 'articles:article_comment' article.pk %}">
                             {% csrf_token %}
-                            <h4>Add comment</h4>
+                            <h4 >Add comment</h4>
                             <div style="padding: 20px; ">{{ form.parent }}</div>
                             <div style="padding: 20px; ">{{ form.article_comment }}</div>
 
