--- a/templates/register_page/login.html
+++ b/templates/register_page/login.html
@@ -24,7 +24,7 @@
 <body>
 <div class="container">
     <div class="d-flex justify-content-center h-100">
-        <div class="card">
+        <div class="card" id="join">
             <div class="card-header">
                 <h3>Sign In</h3>
                 <div class="d-flex justify-content-end social_icon">
