--- a/templates/article/article_detail.html
+++ b/templates/article/article_detail.html
@@ -21,9 +21,12 @@
 
             <div class="card-body" style="text-align: right;">
                 <p><i class="fas fa-eye"></i> {% get_hit_count for article %}&emsp;
-
-                    <a href="#"><i class="fas fa-thumbs-up"></i></a>&emsp;
-                    <a href="#"><i class="fas fa-bookmark"></i></a>
+                <form action="{% url 'articles:like_article' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" name="article_id" value="{{ article.id }}"> lke</button>
+                </form>
+                <a type="submit" name="article-id" href="#"><i class="fas fa-thumbs-up"></i></a>&emsp;
+                <a href="#"><i class="fas fa-bookmark"></i></a>
                 </p>
 
 
@@ -71,7 +74,7 @@
                     <div>
                         <form method="post" action="{% url 'articles:article_comment' article.pk %}">
                             {% csrf_token %}
-                            <h4 >Add comment</h4>
+                            <h4>Add comment</h4>
                             <div style="padding: 20px; ">{{ form.parent }}</div>
                             <div style="padding: 20px; ">{{ form.article_comment }}</div>
 
