--- a/templates/article/article_detail.html
+++ b/templates/article/article_detail.html
@@ -23,7 +23,11 @@
                 <p><i class="fas fa-eye"></i> {% get_hit_count for article %}&emsp;
                 <form action="{% url 'articles:like_article' %}" method="post">
                     {% csrf_token %}
-                    <button type="submit" name="article_id" value="{{ article.id }}"> lke</button>
+                    {{ total_likes }}
+                    <button type="submit" name="article_id" value="{{ article.pk }}" class="btn btn-danger">like
+                    </button>
+
+
                 </form>
                 <a type="submit" name="article-id" href="#"><i class="fas fa-thumbs-up"></i></a>&emsp;
                 <a href="#"><i class="fas fa-bookmark"></i></a>
