--- a/templates/article/article_list.html
+++ b/templates/article/article_list.html
@@ -27,14 +27,10 @@
                 <div class="card-body">
 
                     <div style="text-align: left" >
-                        <i class="fas fa-eye"></i><p>{% get_hit_count for article %}</p>
+                       <p> <i class="fas fa-eye"></i>  {% get_hit_count for article %}</p>
 
                     </div>
-                    <div style="text-align: right">
 
-                        <a href="#"><i class="fas fa-thumbs-up"></i></a>
-                        <a href="#"><i class="fas fa-bookmark"></i></a>
-                    </div>
 
                 </div>
             </div>
